--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "pe2021-2-webpack-babel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "babel-node": "babel-node --presets=@babel/preset-env",
-    "start-dev": "nodemon --exec npm run babel-node -- ./src/index.js"
+    "build:dev": "webpack-dev-server --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@babel/node": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
-    "nodemon": "^2.0.19"
-  }
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
+  },
+  "browserslist": ["last 2 versions", "not dead"]
 }
